model-serving/kubernetes/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pdf-fragmentation-predictor-service-stateful
  namespace: pdf-fragmentation-predictor
  labels:
    app: pdf-fragmentation-predictor-service
spec:
  serviceName: pdf-fragmentation-predictor-service 
  replicas: 1 
  selector:
    matchLabels:
      app: pdf-fragmentation-predictor-service 
  template:
    metadata:
      labels:
        app: pdf-fragmentation-predictor-service 
    spec:
      containers:
        - name: pdf-fragmentation-predictor-service
          image: ghcr.io/scanneddocumentsprocessing/pdf-fragmentation-predictor:latest  # Docker image from GHCR
          imagePullPolicy: Always
          ports:
            - containerPort: 80 
      imagePullSecrets:
        - name: ghcr-secret
