model-serving/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-fragmentation-predictor-service-ingress
  namespace: pdf-fragmentation-predictor
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  ingressClassName: nginx
  rules:
  - host: pdf-fragmentation-predictor-swiss-ai-center.kube-ext.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdf-fragmentation-predictor-service
            port:
              number: 80
  tls:
  - hosts:
    - pdf-fragmentation-predictor-swiss-ai-center.kube-ext.isc.heia-fr.ch
    secretName: pdf-fragmentation-predictor-service-tls-cert
